fix(): center me on mobile

--- a/src/components/backgrounds/dudeinthecoat.less
+++ b/src/components/backgrounds/dudeinthecoat.less
@@ -12,6 +12,8 @@
     @media (max-aspect-ratio: @responsive-aspect-step3) {
       position: relative ! important;
       right: auto;
+      margin-left: 50%; 
+      transform: translateX(-50%);
     }
   }
   
