--- a/src/components/glitches.less
+++ b/src/components/glitches.less
@@ -3,7 +3,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 60%;
+    width: 100%;
     height: 100%;
   }
 
