--- a/src/components/noise.less
+++ b/src/components/noise.less
@@ -11,6 +11,7 @@
   animation-name: noise;
   animation-duration: 0.3s;
   animation-iteration-count: infinite;
+  min-height: 100vh;
 }
 
 @keyframes noise {
